# ai201-project3-takemeter

./: .gitignore  README.md  SUBMISSION_CHECKLIST.md  app.py  baseline_prompt.md  planning.md  pyproject.toml
data/: README.md
data/labeled/: takemeter_hn_labeled.jsonl  takemeter_hn_review_queue.csv  takemeter_hn_review_queue.jsonl
data/raw/: hackernews_comments.csv  hackernews_comments.jsonl
models/takemeter/: README.md
reports/: README.md  baseline_results.md  evaluation_results.json
src/ai201_project3_takemeter/: __init__.py  collect_hn.py  data_io.py  export_colab_csv.py  heuristic_prelabler.py  labels.py  validate_dataset.py
tests/: test_labels.py  test_validation.py
