[project]
name = "ai201-project3-takemeter"
version = "0.1.0"
description = "AI201 Project 3 TakeMeter: discourse-quality text classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.25.0,<7",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "ruff>=0.6.0",
]

[project.optional-dependencies]
baseline = [
    "groq>=0.15.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.4.0",
]
inference = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
]

[project.scripts]
takemeter-collect-hn = "ai201_project3_takemeter.collect_hn:main"
takemeter-validate-dataset = "ai201_project3_takemeter.validate_dataset:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
